@@ -26,7 +26,6 @@ package = Dist::Zilla::Plugin::DROLSKY::License
 package = Dist::Zilla::Plugin::DROLSKY::MakeMaker
 package = Dist::Zilla::Plugin::DROLSKY::PerlLinterConfigFiles
 package = Dist::Zilla::Plugin::DROLSKY::Precious
-package = Dist::Zilla::Plugin::DROLSKY::Role::CoreCounter
 package = Dist::Zilla::Plugin::DROLSKY::RunExtraTests
 package = Dist::Zilla::Plugin::DROLSKY::Test::Precious
 package = Dist::Zilla::Plugin::DROLSKY::WeaverConfig
